[tool.poetry]
name = "triton-backend"
version = "0.1.0"
description = ""
authors = ["TensorRT LLM [svc_tensorrt_llm@nvidia.com]"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
regex = "^2025.10.23"
fire = "^0.7.1"
transformers = "4.56.0"
pandas = "^2.3.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
