[tool.poetry]
name = "triton-backend"
version = "0.1.0"
description = ""
authors = ["TensorRT LLM [90828364+tensorrt-cicd@users.noreply.github.com]"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
regex = "^2026.1.15"
fire = "^0.7.1"
transformers = "4.57.1"
pandas = "^2.3.3"
tabulate = "^0.9.0"
torchao = ">=0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
