[project]
name = "triton-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "TensorRT LLM [90828364+tensorrt-cicd@users.noreply.github.com]"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "regex (>=2026.1.15,<2027.0.0)",
    "fire (>=0.7.1,<0.8.0)",
    "transformers (==4.57.1)",
    "tabulate (>=0.9.0,<0.10.0)",
    "torchao (>=0.14.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
